--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Lato-Bold';
+  src: url('./fonts/Lato-Bold.eot');
+  src: url('./fonts/Lato-Bold.eot?#iefix') format('embedded-opentype'),
+    url('./fonts/Lato-Bold.woff2') format('woff2'),
+    url('./fonts/Lato-Bold.woff') format('woff'),
+    url('./fonts/Lato-Bold.ttf') format('truetype'),
+    url('./fonts/Lato-Bold.svg#Lato-Bold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'Lato';
+  src: url('./fonts/Lato-Regular.eot');
+  src: url('./fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'),
+    url('./fonts/Lato-Regular.woff2') format('woff2'),
+    url('./fonts/Lato-Regular.woff') format('woff'),
+    url('./fonts/Lato-Regular.ttf') format('truetype'),
+    url('./fonts/Lato-Regular.svg#Lato-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+body {
+  background-color: #F6F8FB;
+  font-family: 'Lato', sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.1px;
+}
+
+h1 {
+  font-size: 56px;
+  line-height: 60px;
+  letter-spacing: 0.4px;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 40px;
+  line-height: 46px;
+  letter-spacing: 0.2px;
+  font-weight: 700;
+}
+h3 {
+  font-size: 28px;
+  line-height: 34px;
+  letter-spacing: 0.2px;
+  font-weight: 400;
 }
